# master-thesis

./: .gitignore  CMakeLists.txt  README.md  regulator_out.txt
config/: est_real.json  est_real_par_shift.json  est_sim.json  est_sim_simple.json  ident_bootstrap.json  ident_real.json  ident_real_new_a.json  ident_sim.json  ident_sim_drift.json  ident_sim_simple.json  io_real.json  mhe.json  mhe_real.json  mhe_simple.json  mpc.json  mpc_real.json  mpc_real_diff.json  mpc_simple.json  real_io.json  sim.json  sim_mpc.json  sim_mpc_simple.json  sim_real.json  tar_big_square.json  tar_circle.json  tar_cross.json  tar_square.json  tar_square_rev.json
data/: 1  1_filt  1f  2  2_filt  2f  2f_filt  3  3_filt  3f  3f_filt  4  4f  4f_filt  5  5_filt  match_traj.csv  match_traj_straight.csv  sim
src/: ceres_test.cpp  filter_test.cpp  main.cc  manual_control.cpp  mhe_test.cpp  mpc_control.cpp  mpc_test.cpp  plot_test.cpp  plot_vicon.cpp  run_mhe_mpc_sim.cpp  run_model_est.cpp  run_model_ident.cpp  run_mpc_sim.cpp  run_sim.cpp  sim_test.cpp  vicon_client.h  vicon_udp_client.cc
src/filter/: vicon_filter.cpp  vicon_filter.hpp
src/logging/: logger.hpp
src/model/: drone_model.cpp  drone_model.hpp  drone_sim.cpp  drone_sim.hpp  model_sim.hpp
src/optim/: mhe.hpp  model_est.hpp  model_ident.hpp  mpc.hpp
src/tello/: joystick.cc  joystick.h  tello.cc  tello.h  tello_regulate.cpp  timeutils.cc  timeutils.h
src/utils/: aux.cpp  aux.hpp  keyboard_handler.cpp  keyboard_handler.hpp  logger.hpp  parser.hpp
src/vicon/: vicon_client.cc  vicon_handler.cpp  vicon_handler.hpp  vicon_udp_client.h
tmp/: run_model_est.cpp
tools/: filter_logs.py  filter_plot.ipynb  ident_boostrap.ipynb  ident_bootstrap.py  log_stats.ipynb  match_trajectory.py  monitor.py  plot_boostrap_boxplot.py  plot_delay.py  plot_flight.py  plot_ident.py  plot_match.ipynb  plot_match.py  plot_traject.ipynb  plot_traject.py  predict_traj.py  split_logs.py
